--- a/Thermory.Web/Views/Shared/_Layout.cshtml
+++ b/Thermory.Web/Views/Shared/_Layout.cshtml
@@ -56,12 +56,12 @@
             @RenderBody()
         </section>
     </div>
-    <footer>
-        <div class="content-wrapper">
+    <nav class="navbar navbar-default navbar-fixed-bottom">
+        <div class="container">
             <div class="float-left">
-                <p>&copy; @DateTime.Now.Year - Thermory</p>
+                &copy; @DateTime.Now.Year - Thermory
             </div>
         </div>
-    </footer>
+    </nav>
 </body>
 </html>
